# email-calendar-agent-lab

./: .env.langfuse.example  .gitignore  ARCHITECTURE.md  HERMES_REFLECTIVE_LOOP_PLAN.md  LANGFUSE.md  README.md  UI_SELF_IMPROVEMENT_RUNBOOK.md  pyproject.toml
docs/: dashboard_output_writeup.md
evals/: generated.jsonl  heldout.jsonl  stable.jsonl  workflow.jsonl
logs/: run_history.jsonl  run_latest.json
logs/sessions/: generated_prod_flight_arrival_timezone-02cc4900.json  generated_prod_flight_arrival_timezone-05895599.json  generated_prod_flight_arrival_timezone-094824b1.json  generated_prod_flight_arrival_timezone-0dc86682.json  generated_prod_flight_arrival_timezone-0eb12cf5.json  generated_prod_flight_arrival_timezone-0fc26acc.json  generated_prod_flight_arrival_timezone-19fe8cf3.json  generated_prod_flight_arrival_timezone-1e0e8afd.json  generated_prod_flight_arrival_timezone-1e1af651.json  generated_prod_flight_arrival_timezone-1f2801b9.json  generated_prod_flight_arrival_timezone-20eaba65.json  generated_prod_flight_arrival_timezone-30fb490e.json  generated_prod_flight_arrival_timezone-31f48a27.json  generated_prod_flight_arrival_timezone-3b56484d.json  generated_prod_flight_arrival_timezone-3bb0aed5.json  (+1048 more)
memory/: email_calendar_lab.sqlite  email_calendar_lab.sqlite-shm
prompts/: baseline.md  candidate.md  current.json  rejected_candidate.md
scripts/: run_with_langfuse.sh  start_langfuse_local.sh
skills/: ambiguous_contact_resolution.md  flight_email_parsing.md  free_busy_lookup.md  temporal_calendar_reasoning.md
src/email_calendar_lab/: __init__.py  (+31 more)
(+5 files in other folders)
